remove zero tag from calculator grid and fix row spacing at number grid

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -34,7 +34,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .zero {
@@ -49,9 +49,10 @@
     grid-template-areas:
     "output output"
     "actions operands"
-    "numbers operands"
-    "zero operands";
-    grid-template-columns: 2fr 1fr;
+    "numbers operands";
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr 4fr;
+    background-color: orange;
 }
 
 button {
